--- a/styles_projects.css
+++ b/styles_projects.css
@@ -5,11 +5,17 @@
     font-family: 'Arial', sans-serif;
 }
 
+.page-wrapper {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 header {
-    background-color: #624E88; /*header BG color*/
+    background-color: #A67DE3; /*header BG color*/
     height: 5vh;
     width: 100%;
-    color: #25171A; /*header Font colro*/
+    color: #302131; /*header Font colro*/
     font-size: 20px;
     margin: 0;
     padding: 40px;
@@ -18,8 +24,9 @@ header {
     align-items: center;
     position: relative;
 }
+
     header nav a {
-        color: #25171A; /*header Clickable colors*/
+        color: #302131; /*header Clickable colors*/
         text-decoration: none;
         font-size: 15px;
         padding: 30px;
@@ -30,25 +37,35 @@ header {
         }
 
 body {
-    height: 110vh;
-    background: linear-gradient(to bottom, #8967B3, #CB80AB,#E6D9A2);
-    /* background-color: #cea7ee;*/ /*Body BGM*/
+    background: linear-gradient( to bottom, rgba(137, 103, 179, 0.5), /* #8967B3 with transparency */
+    rgba(203, 128, 171, 0.4), /* #CB80AB with transparency */
+    rgba(230, 217, 162, 0.3) /* #E6D9A2 with transparency */
+    );
+    height: auto; /* Adjusted height to allow the content to dictate the height */
 }
-       body h2 {
+
+    body h2 {
         font-size: 32px; /* Set the font size of h1 within the body */
     }
+
+    body p1 {
+        font-size: 16px;
+    }
+
 main {
-    color: #25171A; /* body font color*/
+    color: #302131; /* body font color */
     font-size: 30px;
-    /* padding: 20px;*/
     margin: 100px;
+    margin-right: 10vw;
+    margin-left: 10vw;
+    flex: 1; /* Ensures main takes up remaining space */
 }
+
 footer {
-    position: fixed;
-    bottom: 0;
     width: 100%;
-    background-color: #333;
-    color: white;
+    background-color: #FDC4C4;
+    color: #302131;
     text-align: center;
     padding: 10px;
+    margin-top: auto; /* Pushes footer to the bottom */
 }
