--- a/styles_music.css
+++ b/styles_music.css
@@ -4,12 +4,17 @@
     box-sizing: border-box;
     font-family: 'Arial', sans-serif;
 }
+.page-wrapper {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 
 header {
-    background-color: #17444A; /*header BG color*/
+    background-color: #79CDA9; /*header BG color*/
     height: 5vh;
     width: 100%;
-    color: #0D1C1A; /*header Font colro*/
+    color: #213126; /*header Font colro*/
     font-size: 20px;
     margin: 0;
     padding: 40px;
@@ -19,7 +24,7 @@ header {
     position: relative;
 }
     header nav a {
-        color: #0D1C1A; /*header Clickable colors*/
+        color: #213126; /*header Clickable colors*/
         text-decoration: none;
         font-size: 15px;
         padding: 30px;
@@ -30,25 +35,69 @@ header {
         }
 
 body {
-    height: 110vh;
-    background: linear-gradient(to bottom, #006769, #40A578,#E6FF94);
+    height: 150vh;
+    background: linear-gradient( to bottom, rgba(142, 225, 86, 0.5),
+    rgba(64, 165, 120, 0.4),
+    rgba(230, 255, 148, 0.3) );
 }
        body h2 {
         font-size: 32px; /* Set the font size of h1 within the body */
     }
 main {
-    color: #0D1C1A; /* body font color*/
+    color: #213126; /* body font color*/
     font-size: 30px;
-    /* padding: 20px;*/
-    margin: 100px;
+    padding: 20px;
+    margin: 40px;
+    text-align: center;
+    flex: 1;
 }
 footer {
-    position: fixed;
-    bottom: 0;
     width: 100%;
-    background-color: #333;
-    color: white;
-    text-align: center;
+    background-color: #A3B497;
+    color: #213126;
+     text-align: center;
     padding: 10px;
+    margin-top:auto;
 }
 
+/*TOGGLE MUSIC*/
+.button-container {
+    display: flex;
+    gap: 50px;
+    margin-top: 100px;
+    margin-bottom: 0px;
+    justify-content: center;
+}
+
+.toggle-button {
+    padding: 10px 100px;
+    font-size: 18px;
+    cursor: pointer;
+    background-color: #0C2322;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+    .toggle-button.active {
+        background-color: #5A8864;
+    }
+
+.song-list {
+    display: none;
+    padding: 20px;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+    .song-list.active {
+        display: block;
+    }
+
+.song {
+    padding: 5px;
+    margin: 10px 0;
+    background-color: rgba(64, 165, 120, 0.2);
+    border-radius: 10px;
+}
