--- a/styles_music.css
+++ b/styles_music.css
@@ -11,7 +11,7 @@
 }
 
 header {
-    background-color: #79CDA9; /*header BG color*/
+    background-color: /*#79CDA9*/; /*header BG color*/
     height: 5vh;
     width: 100%;
     color: #213126; /*header Font colro*/
@@ -27,11 +27,18 @@ header {
         color: #213126; /*header Clickable colors*/
         text-decoration: none;
         font-size: 15px;
-        padding: 30px;
+        padding: 15px 30px;
+        border-radius: 20px;
     }
 
         header nav a:hover {
-            text-decoration: underline;
+            /*text-decoration: underline;*/
+            background-color: rgba(64, 165, 120, 0.5);
+            color: white;
+        }
+        header nav a.current {
+            background-color: rgba(64, 165, 120, .9);
+            color: white;
         }
 
 body {
@@ -55,9 +62,10 @@ footer {
     width: 100%;
     background-color: #A3B497;
     color: #213126;
-     text-align: center;
+    text-align: center;
     padding: 10px;
     margin-top:auto;
+    position: relative;
 }
 
 /*TOGGLE MUSIC*/
@@ -72,16 +80,25 @@ footer {
 .toggle-button {
     padding: 10px 100px;
     font-size: 18px;
-    cursor: pointer;
-    background-color: #0C2322;
+    
+    background-color: /*#5A8864 */#0C2322;
     color: white;
     border: none;
     border-radius: 5px;
     transition: background-color 0.3s;
 }
+    .toggle-button:hover {
+        background-color: #5A8864;
+        transition: background-color 0.3s;
+        cursor: pointer;
+    }
 
     .toggle-button.active {
         background-color: #5A8864;
+        cursor: default;
+        border: 2.25px solid #0C2322;
+        
+
     }
 
 .song-list {
