--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,10 @@
 }
 
 header {
-    background-color: /*#F9B9B9*/;
+    /*background-color:*/ /*#F9B9B9*/ /*;*/
+/*    background: rgba(255, 112, 112, .5);
+*/    
+    background: linear-gradient(to right, rgba(255, 112, 112, 0.5), rgba(255, 112, 112, 0.1));
     height: 5vh;
     width: 100%;
     color: #312B21;
@@ -45,7 +48,8 @@ header {
         }
 body {
     min-height: 100vh;
-    background: linear-gradient(to bottom, rgba(255, 112, 112, 0.4), rgba(150, 95, 138, 0.4), rgba(74, 198, 183, 0.3) );
+    background: linear-gradient(to bottom, rgba(255, 112, 112, 0.1), rgba(255, 112, 112, 0.25),rgba(255, 112, 112, 0.1));
+    /*background: linear-gradient(to bottom, rgba(255, 112, 112, 0.4), rgba(150, 95, 138, 0.4), rgba(74, 198, 183, 0.3) );*/
 }
 
    
@@ -134,7 +138,7 @@ main {
 footer {
     /* Remove position: fixed */
     width: 100%;
-    background-color: /*#B1DBE7*/;
+    background-color: rgba(255, 112, 112, 0.1);
     color: #312B21;
     text-align: center;
     padding: 10px;
