--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ header {
         }
 body {
     min-height: 100vh;
-    background: linear-gradient(to bottom, rgba(255, 112, 112, 0.1), rgba(255, 112, 112, 0.25),rgba(255, 112, 112, 0.1));
+    background: linear-gradient(to bottom, rgba(255, 112, 112, 0.25), rgba(255, 112, 112, 0.5));
     /*background: linear-gradient(to bottom, rgba(255, 112, 112, 0.4), rgba(150, 95, 138, 0.4), rgba(74, 198, 183, 0.3) );*/
 }
 
