--- a/styles_music.css
+++ b/styles_music.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .page-wrapper {
     min-height: 100vh;
@@ -12,7 +12,7 @@
 
 header {
     background-color: /*#79CDA9*/; /*header BG color*/
-    background: linear-gradient(to right, rgba(64, 165, 120, .5), rgba(64, 165, 120, .1));
+    background: linear-gradient(to right, rgba(64, 165, 120, 1), rgba(64, 165, 120, .1));
     height: 5vh;
     width: 100%;
     color: #213126; /*header Font colro*/
@@ -53,7 +53,7 @@ body {
     }
 main {
     color: #213126; /* body font color*/
-    font-size: 30px;
+    font-size: 18px;
     padding: 20px;
     margin: 40px;
     text-align: center;
